<resources>
    <string name="app_name">Shoplive SDK Sample</string>
    <string name="shoplive">Shoplive</string>
    <string name="dialog_confirm">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="bt_step1">STEP 1. Campaign setting</string>
    <string name="bt_step2">STEP 2. User setting</string>
    <string name="bt_step3">STEP 3. Advanced setting</string>
    <string name="bt_play">Play</string>
    <string name="bt_window_preview">Window Preview</string>
    <string name="bt_popup_preview">Popup Preview</string>
    <string name="bt_in_app_preview">In App Preview</string>
    <string name="bt_swipe_preview">Swipe Preview</string>
    <string name="bt_login">Login</string>
    <string name="bt_hybrid_shortform">Hybrid Shortform</string>
    <string name="bt_native_shortform">Native Shortform</string>
    <string name="bt_shortform_editor">Shortform Editor</string>
    <string name="bt_ok">OK</string>
    <string name="title_main">Shoplive SDK Sample</string>
    <string name="title_campaign">Campaign</string>
    <string name="title_user">User</string>
    <string name="title_option">Advanced setting</string>
    <string name="title_login">Login</string>
    <string name="hint_accessKey">Access Key</string>
    <string name="hint_campaignKey">Campaign Key</string>
    <string name="hint_userId">User ID (Required)</string>
    <string name="hint_userName">User Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_userScore">User Score</string>
    <string name="hint_jwt">JWT token</string>
    <string name="hint_share_scheme_url">Sharing URL or scheme</string>
    <string name="hint_loading_progress_hex">Not set (default: #FFFFFF)</string>
    <string name="hint_login_id">ID</string>
    <string name="hint_login_pw">Password</string>
    <string name="toast_headset_mute_option">It can be set only when the Earphone/Headset Option 1 is enabled.</string>
    <string name="toast_user_id_required">User id required to use Shortform Editor.</string>
    <string name="alert_coupon_download_success">The coupon has been downloaded.</string>
    <string name="alert_coupon_download_fail">The coupon has not been downloaded.</string>
    <string name="alert_custom_action_success">Custom action runs successfully</string>
    <string name="alert_custom_action_fail">Custom action runs failed</string>
    <string name="alert_preview_permission_info">To use preview, you should allow "Display over other apps" permission. Do you want to allow this permission?</string>
    <string name="alert_need_login">Log in to use this feature. Are you sure to log in?</string>
    <string name="alert_call_permission">"\'Earphone/Headset Option 1\' feature requires \'Phone\' permission. Please \'Allow\' permission before using this feature.</string>
    <string name="alert_not_support_pip">This device cannot support os pip.</string>
    <string name="menu_done">Done</string>
    <string name="menu_save">Save</string>
    <string name="label_radio_guest">Guest</string>
    <string name="label_radio_user">Simple AUTH</string>
    <string name="label_radio_token">Token AUTH</string>
    <string name="label_use_guest">Set as guest mode.</string>
    <string name="label_use_guest2">Guest mode.</string>
    <string name="label_use_user">Set as simple authentication.</string>
    <string name="label_use_user2">Simple authentication.</string>
    <string name="label_use_token">Set as JWT token authentication.</string>
    <string name="label_use_token2">JWT token authentication.</string>
    <string name="label_no_campaign">Campaign is not set correctly.</string>
    <string name="label_no_user">User is not set correctly.</string>
    <string name="label_no_token">JWT token is empty.</string>
    <string name="label_none">None</string>
    <string name="label_token_guide">JWT token creation guide</string>
    <string name="label_token_guide_link">https://en.shoplive.guide/docs/use-jwt-auth</string>
    <string name="label_gender_male">Male</string>
    <string name="label_gender_female">Female</string>
    <string name="label_gender_none">Other</string>
    <string name="label_sdk_version">SDK v%1$s</string>
    <string name="label_ak_ck">• Access Key : %1$s\n• Campaign Key : %2$s</string>
    <string name="setting_category_player">Shoplive Player setting</string>
    <string name="setting_category_preview">Preview</string>
    <string name="setting_category_auto_play">Keep Playing</string>
    <string name="setting_category_share">Sharing UI</string>
    <string name="setting_category_loading_progress">Progress bar</string>
    <string name="setting_category_chat_font">Using custom font</string>
    <string name="setting_category_exit">Exit</string>
    <string name="setting_category_sound">Sound</string>
    <string name="setting_category_secure">Secure</string>
    <string name="setting_pipRatio_dialog_title">Aspect ratio</string>
    <string name="setting_loading_progress_color">Color (Hex color code)</string>
    <string name="setting_share">Sharing UI</string>
    <string name="setting_next_action_on_handle_navigation">Synchronized Player action</string>
    <string name="setting_next_action_on_handle_navigation2">When a user taps link</string>
    <string name="setting_player_status_bar_transparent">Is Player status bar transparent?</string>
    <string name="preference_pip_ratio_key">pipRatio</string>
    <string name="preference_pip_ratio_title">Aspect ratio</string>
    <string name="preference_pip_ratio_summary">Select an aspect ratio.</string>
    <string name="preference_headset_key">headset</string>
    <string name="preference_headset_title">Earphone/Headset Option 1</string>
    <string name="preference_headset_summary">Enabling this option, the video will keep playing even if the earphone/headset is disconnected.</string>
    <string name="preference_mute_key">mute</string>
    <string name="preference_mute_title">Earphone/Headset Option 2</string>
    <string name="preference_mute_summary">Enabling this option, the video will keep playing and mute the volume even if the earphone/headset is disconnected.\n(Available only when Earphone/Headset Option 1 is enabled.)</string>
    <string name="preference_call_key">call</string>
    <string name="preference_call_title">When a call ended</string>
    <string name="preference_call_title2">Call ended</string>
    <string name="preference_call_summary">Enabling this option, the video will keep playing when the call ended.</string>
    <string name="preference_loading_progress_key">loadingProgress</string>
    <string name="preference_loading_progress_title">Color (Hex color code)</string>
    <string name="preference_loading_progress_summary">Not set (default: #FFFFFF)</string>
    <string name="preference_loading_image_animation_key">loadingImageAnimation</string>
    <string name="preference_loading_image_animation_title">Using image animation</string>
    <string name="preference_loading_image_animation_summary">Enabling this option, disables applying color to the progress bar.</string>
    <string name="preference_custom_share_key">customShare</string>
    <string name="preference_custom_share_title">Using custom sharing UI</string>
    <string name="preference_custom_share_summary">Enabling this option, implement the custom sharing UI.</string>
    <string name="preference_share_url_key">shareUrl</string>
    <string name="preference_share_url_title">URL or scheme</string>
    <string name="preference_share_url_summary">Enter the scheme or URL to share.</string>
    <string name="preference_custom_font_key">customFont</string>
    <string name="preference_custom_font_title">Custom font</string>
    <string name="preference_custom_font_summary">Disabling this option, will use the system default font.</string>
    <string name="preference_pip_mode_on_back_pressed_key">pipModeOnBackPressed</string>
    <string name="preference_pip_mode_on_back_pressed_title">Switch PIP mode when Back button taps</string>
    <string name="preference_pip_mode_on_back_pressed_summary">When tapping the back button, PIP mode will be launched.</string>
    <string name="preference_auto_close_key">autoClose</string>
    <string name="preference_auto_close_title">Destroy instance when app closed</string>
    <string name="preference_auto_close_summary">When the app is closed, Shoplive object will also be destroyed. if you do not use this option, run ShopLive.close() manually.</string>
    <string name="preference_tablet_aspect_key">tabletAspect</string>
    <string name="preference_tablet_aspect_title">Aspect ratio for the tablet device</string>
    <string name="preference_tablet_aspect_summary">Adjust the size of the video to the screen (off) / Adjust the size of screen to the video (on)</string>
    <string name="preference_next_action_key">nextAction</string>
    <string name="preference_next_action_title">Synchronized player action when user taps link</string>
    <string name="preference_next_action_summary">Set the Synchronized Shoplive Player action when a user taps a link.</string>
    <string name="preference_mute_start_key">muteStart</string>
    <string name="preference_mute_start_title">Muted when the player starts</string>
    <string name="preference_mute_start_summary">On: Muted, Off: Unmuted</string>
    <string name="preference_mute_loss_focus_key">muteLossFocus</string>
    <string name="preference_mute_loss_focus_title">When loss audio focus</string>
    <string name="preference_mute_loss_focus_summary">On: Muted, Off: Unmuted\n(Whether to mute audio when running another application while watching a shoplive stream)</string>
    <string name="preference_player_status_bar_transparent_key">statusBarTransparent</string>
    <string name="preference_player_status_bar_transparent_title">Whether to extend system status bar area</string>
    <string name="preference_player_status_bar_transparent_summary">On: extend, Off: not extend\n(Whether to play the video by extending it to the status bar area)</string>
    <string name="preference_player_screen_capture_enabled_key">playerScreenCaptureEnabled</string>
    <string name="preference_player_screen_capture_enabled_title">Can be captured with screenshots</string>
    <string name="preference_player_screen_capture_enabled_summary">On: Allowed, Off: Not allowed</string>
    <string name="preference_preview_use_close_button_key">useCloseButton</string>
    <string name="preference_preview_use_close_button_title">Use close button</string>
    <string name="preference_preview_use_close_button_summary">Set whether to use the close button in Preview. (Default is not used)</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success">Succeed</string>
    <string name="fail">Failed</string>
    <string name="custom">Custom</string>
    <string name="sample_coupon_download">Download a coupon</string>
    <string name="sample_coupon_download_id">Coupon ID : %1$s</string>
    <string name="sample_custom_action">Custom Action</string>
    <string name="sample_custom_action_id">ID : %1$s</string>
    <string name="sample_custom_action_type">Type : %1$s</string>
    <string name="sample_custom_action_payload">Payload : %1$s</string>
    <string name="sample_share">Sharing UI</string>
    <string name="sample_copy_link">Copy the link</string>
    <string name="sample_share_kakao">Share the link on Kakaotalk</string>
    <string name="sample_share_line">Share the link on Line</string>
    <string name="shortform_tab_main">Main</string>
    <string name="shortform_tab_vertical">Col</string>
    <string name="shortform_tab_horizontal">Row</string>
    <string name="shortform_tab_full">Full</string>
    <string name="shortform_button_setting">Setting</string>
    <string name="shortform_tab_main_subtitle">Highlight content</string>
</resources>