<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/transparent">

    <RadioGroup
            android:id="@+id/rgAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/rbGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_guest"
                />

        <RadioButton
                android:id="@+id/rbUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_user"
                android:checked="true"
                android:layout_marginStart="6dp"
                />

        <RadioButton
                android:id="@+id/rbToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_token"
                android:layout_marginStart="6dp"
                />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_use_user"
            android:layout_below="@id/rgAuth"
            android:layout_marginStart="12dp"
            />

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_below="@id/tvAuth"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userIdLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_userId">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_userName">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_age">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userScoreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_userScore">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gender_male"
                        />

                <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gender_female"
                        android:layout_marginStart="6dp"
                        />

                <RadioButton
                        android:id="@+id/rbNone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gender_none"
                        android:layout_marginStart="6dp"
                        android:checked="true"
                        />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTokenGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_token_guide"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etTokenLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_jwt"
                    android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etToken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>