<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:startDestination="@+id/main_fragment"
        >
    <fragment
            android:id="@+id/main_fragment"
            android:name="cloud.shoplive.sample.fragment.MainFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_main"
            >

        <action android:id="@+id/to_campaign_fragment"
                app:destination="@id/campaign_fragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                />

        <action android:id="@+id/to_user_fragment"
                app:destination="@id/user_fragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                />

        <action android:id="@+id/to_settings_fragment"
                app:destination="@id/settings_fragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                />
    </fragment>

    <fragment
            android:id="@+id/campaign_fragment"
            android:name="cloud.shoplive.sample.fragment.CampaignFragment"
            android:label="@string/title_campaign"
            tools:layout="@layout/fragment_campaign"
            />

    <fragment
            android:id="@+id/user_fragment"
            android:name="cloud.shoplive.sample.fragment.UserFragment"
            android:label="@string/title_user"
            tools:layout="@layout/fragment_user"
            />

    <fragment
            android:id="@+id/settings_fragment"
            android:name="cloud.shoplive.sample.fragment.SettingsFragment"
            android:label="@string/title_option"
            />

</navigation>