<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="12dp">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCampaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/bt_step1"
            android:textAllCaps="false"
            android:background="#bbbbbb"
            />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCampaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btCampaign"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/label_no_campaign"
            android:padding="6dp"
            />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvCampaign"
            android:text="@string/bt_step2"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="#bbbbbb"
            />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btUser"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/label_no_user"
            android:padding="6dp"
            />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvUser"
            android:text="@string/bt_step3"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="#bbbbbb"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/btOption"
            app:layout_constraintBottom_toTopOf="@id/btPlay"
            android:padding="6dp"
            >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/btPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btPreview"
            android:text="@string/bt_play"
            android:textAllCaps="false"
            />

    <Button
            android:id="@+id/btPreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btPlay"
            android:text="@string/bt_preview"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"
            />

</androidx.constraintlayout.widget.ConstraintLayout>