<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/hint_login_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:enabled="false"
        android:hint="@string/hint_login_pw"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/etId"
        app:layout_constraintStart_toStartOf="@id/etId"
        app:layout_constraintTop_toBottomOf="@id/etId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/bt_login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/etId"
        app:layout_constraintStart_toStartOf="@id/etId"
        app:layout_constraintTop_toBottomOf="@id/etPw" />

</androidx.constraintlayout.widget.ConstraintLayout>